--- a/index.html
+++ b/index.html
@@ -24,118 +24,31 @@ body {
   min-height:100vh;
 }
 
-/* Chat layout */
-#chatContainer {
-  display:flex;
-  max-width:900px;
-  margin:2rem auto;
-  gap:1rem;
-  animation: fadeIn 0.8s ease-out;
-}
-
-/* Sidebar for profile + packs */
-#profileSidebar {
-  width:220px;
-  padding:1rem;
-  background: var(--bg-card);
-  border-radius:16px;
-  flex-shrink:0;
-  display:flex;
-  flex-direction:column;
-  gap:1rem;
-  box-shadow:0 6px 16px rgba(0,0,0,0.3);
-}
-
-/* Pack buttons */
-.packBtn {
-  padding:0.6rem;
-  border-radius:12px;
-  border:none;
-  background: var(--accent);
-  color:#1b1f27;
-  cursor:pointer;
-  font-weight:500;
-  transition: all 0.3s ease;
-}
+#chatContainer { display:flex; max-width:900px; margin:2rem auto; gap:1rem; animation: fadeIn 0.8s ease-out; }
+#profileSidebar { width:220px; padding:1rem; background: var(--bg-card); border-radius:16px; flex-shrink:0; display:flex; flex-direction:column; gap:1rem; box-shadow:0 6px 16px rgba(0,0,0,0.3); }
+.packBtn { padding:0.6rem; border-radius:12px; border:none; background: var(--accent); color:#1b1f27; cursor:pointer; font-weight:500; transition: all 0.3s ease; }
 .packBtn:hover { background:#ff9f40; transform:scale(1.03); }
+.profileInfo p { font-size:0.85rem; color:var(--text-muted); margin:0.2rem 0; }
 
-/* Profile info */
-.profileInfo p {
-  font-size:0.85rem;
-  color:var(--text-muted);
-  margin:0.2rem 0;
-}
-
-/* Chat area */
-#chatArea { 
-  flex:1; 
-  display:flex; 
-  flex-direction:column; 
-  background: var(--bg-card);
-  border-radius:16px;
-  padding:1rem;
-  box-shadow:0 6px 16px rgba(0,0,0,0.25);
-}
-
-/* Messages */
-.message {
-  max-width:75%;
-  padding:0.8rem 1.2rem;
-  margin-bottom:0.7rem;
-  border-radius:20px;
-  line-height:1.5;
-  opacity:0;
-  animation: fadeInMessage 0.5s forwards;
-}
+#chatArea { flex:1; display:flex; flex-direction:column; background: var(--bg-card); border-radius:16px; padding:1rem; box-shadow:0 6px 16px rgba(0,0,0,0.25); }
+.message { max-width:75%; padding:0.8rem 1.2rem; margin-bottom:0.7rem; border-radius:20px; line-height:1.5; opacity:0; animation: fadeInMessage 0.5s forwards; }
 .user { background:var(--accent); color:#1b1f27; align-self:flex-end; }
 .bot { background:var(--bg-card); align-self:flex-start; }
-
-/* Starter phrase box */
-#starterBox {
-  margin:1rem 0;
-  padding:0.8rem;
-  background:#1f232d;
-  border-radius:12px;
-  cursor:pointer;
-  transition: transform 0.2s;
-}
+#starterBox { margin:1rem 0; padding:0.8rem; background:#1f232d; border-radius:12px; cursor:pointer; transition: transform 0.2s; }
 #starterBox:hover { transform:scale(1.03); }
 
-/* Footer input */
-footer {
-  display:flex;
-  padding:0.8rem;
-  gap:0.5rem;
-}
-footer input {
-  flex:1;
-  padding:0.6rem;
-  border-radius:12px;
-  border:none;
-  background:#1f232d;
-  color:var(--text-main);
-}
-footer button {
-  padding:0.6rem 1rem;
-  border-radius:999px;
-  border:none;
-  background: var(--accent);
-  cursor:pointer;
-  transition: all 0.3s ease;
-}
+footer { display:flex; padding:0.8rem; gap:0.5rem; }
+footer input { flex:1; padding:0.6rem; border-radius:12px; border:none; background:#1f232d; color:var(--text-main); }
+footer button { padding:0.6rem 1rem; border-radius:999px; border:none; background: var(--accent); cursor:pointer; transition: all 0.3s ease; }
 footer button:hover { transform: scale(1.05); background:#ff9f40; }
 
-/* Animations */
 @keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
 @keyframes fadeInMessage { from {opacity:0; transform: translateY(10px);} to {opacity:1; transform: translateY(0);} }
-
 </style>
 </head>
 <body>
 
 <div id="chatContainer">
-
-  <!-- Sidebar -->
   <div id="profileSidebar">
     <div class="profileInfo">
       <p>👤 <strong id="profileName"></strong></p>
@@ -150,12 +63,10 @@ footer button:hover { transform: scale(1.05); background:#ff9f40; }
     <button class="packBtn" onclick="showStarter('Advanced Small Talk')">Advanced Small Talk</button>
   </div>
 
-  <!-- Chat Area -->
   <div id="chatArea">
     <div id="starterBox" style="display:none;"></div>
     <div id="chat"></div>
   </div>
-
 </div>
 
 <footer>
@@ -164,7 +75,6 @@ footer button:hover { transform: scale(1.05); background:#ff9f40; }
 </footer>
 
 <script>
-/* Load profile from Step 1 */
 const nickname = localStorage.getItem("nickname") || "Friend";
 const language = localStorage.getItem("language") || "en-US";
 const companion = localStorage.getItem("companion") || "Whisp";
@@ -173,27 +83,36 @@ document.getElementById("profileName").textContent = nickname;
 document.getElementById("profileLanguage").textContent = language;
 document.getElementById("profileCompanion").textContent = companion;
 
-/* Starter phrases by pack, with time context */
+/* Seasonal emojis */
+function getSeasonEmoji(){
+  const month = new Date().getMonth()+1;
+  if(month>=12 || month<=2) return "❄️"; // Winter
+  if(month>=3 && month<=5) return "🌸"; // Spring
+  if(month>=6 && month<=8) return "☀️"; // Summer
+  return "🍂"; // Fall
+}
+
+/* Conversation starters with seasonal emoji injected */
+const season = getSeasonEmoji();
 const conversationStarters = {
   "Workplace":[
-    { phrase: "Good morning! How's your day starting?", context:"morning" },
-    { phrase: "Hi! Did you catch the latest project update?", context:"afternoon" },
-    { phrase: "Evening! Ready to wrap things up?", context:"evening" }
+    { phrase:`${season} Good morning! How's your day starting?`, context:"morning" },
+    { phrase:`${season} Hi! Did you catch the latest project update?`, context:"afternoon" },
+    { phrase:`${season} Evening! Ready to wrap things up?`, context:"evening" }
   ],
   "Dating & Social":[
-    { phrase:"Hi there! Would you like to grab coffee?", context:"morning" },
-    { phrase:"Hey! Want to take a walk this afternoon?", context:"afternoon" },
-    { phrase:"Hello! How was your day today?", context:"evening" }
+    { phrase:`${season} Hi there! Would you like to grab coffee?`, context:"morning" },
+    { phrase:`${season} Hey! Want to take a walk this afternoon?`, context:"afternoon" },
+    { phrase:`${season} Hello! How was your day today?`, context:"evening" }
   ],
   "Travel":[
-    { phrase:"Hi! Where is the nearest train station?", context:"any" }
+    { phrase:`${season} Hi! Where is the nearest train station?`, context:"any" }
   ],
   "Advanced Small Talk":[
-    { phrase:"Hello! Did you see the game yesterday?", context:"any" }
+    { phrase:`${season} Hello! Did you see the game yesterday?`, context:"any" }
   ]
 };
 
-/* Determine time of day */
 function getTimeContext(){
   const hour = new Date().getHours();
   if(hour>=5 && hour<12) return "morning";
@@ -201,7 +120,6 @@ function getTimeContext(){
   return "evening";
 }
 
-/* Show one starter phrase per pack */
 function showStarter(pack){
   const starters = conversationStarters[pack];
   const timeCtx = getTimeContext();
@@ -212,9 +130,7 @@ function showStarter(pack){
   starterBox.onclick = ()=> addMessage(starter.phrase,"bot");
 }
 
-/* Chat logic */
 const chat = document.getElementById("chat");
-
 function addMessage(text,sender){
   const div = document.createElement("div");
   div.className = `message ${sender}`;
