--- a/index.html
+++ b/index.html
@@ -14,21 +14,17 @@
   --text-muted: #a1a6b0;
 }
 
-body {
-  margin:0;
-  font-family:'Montserrat', system-ui, sans-serif;
-  background: var(--bg-main);
-  color: var(--text-main);
-  display:flex;
-  flex-direction:column;
-  min-height:100vh;
-}
+body { margin:0; font-family:'Montserrat',system-ui,sans-serif; background: var(--bg-main); color: var(--text-main); display:flex; flex-direction:column; min-height:100vh; }
 
 #chatContainer { display:flex; max-width:900px; margin:2rem auto; gap:1rem; animation: fadeIn 0.8s ease-out; }
+
 #profileSidebar { width:220px; padding:1rem; background: var(--bg-card); border-radius:16px; flex-shrink:0; display:flex; flex-direction:column; gap:1rem; box-shadow:0 6px 16px rgba(0,0,0,0.3); }
 .packBtn { padding:0.6rem; border-radius:12px; border:none; background: var(--accent); color:#1b1f27; cursor:pointer; font-weight:500; transition: all 0.3s ease; }
 .packBtn:hover { background:#ff9f40; transform:scale(1.03); }
 .profileInfo p { font-size:0.85rem; color:var(--text-muted); margin:0.2rem 0; }
+
+/* Conversation Starter title */
+#starterTitle { font-weight:600; margin:0.5rem 0; color:#ffb86c; text-align:center; }
 
 #chatArea { flex:1; display:flex; flex-direction:column; background: var(--bg-card); border-radius:16px; padding:1rem; box-shadow:0 6px 16px rgba(0,0,0,0.25); }
 .message { max-width:75%; padding:0.8rem 1.2rem; margin-bottom:0.7rem; border-radius:20px; line-height:1.5; opacity:0; animation: fadeInMessage 0.5s forwards; }
@@ -56,7 +52,7 @@ footer button:hover { transform: scale(1.05); background:#ff9f40; }
       <p>🧚 <span id="profileCompanion"></span></p>
     </div>
     <hr>
-    <p style="margin:0.5rem 0; font-weight:500;">Pick a conversation pack:</p>
+    <p id="starterTitle">Conversation Starter</p>
     <button class="packBtn" onclick="showStarter('Workplace')">Workplace</button>
     <button class="packBtn" onclick="showStarter('Dating & Social')">Dating & Social</button>
     <button class="packBtn" onclick="showStarter('Travel')">Travel</button>
@@ -83,16 +79,16 @@ document.getElementById("profileName").textContent = nickname;
 document.getElementById("profileLanguage").textContent = language;
 document.getElementById("profileCompanion").textContent = companion;
 
-/* Seasonal emojis */
+/* Seasonal emoji */
 function getSeasonEmoji(){
   const month = new Date().getMonth()+1;
-  if(month>=12 || month<=2) return "❄️"; // Winter
-  if(month>=3 && month<=5) return "🌸"; // Spring
-  if(month>=6 && month<=8) return "☀️"; // Summer
-  return "🍂"; // Fall
+  if(month>=12 || month<=2) return "❄️";
+  if(month>=3 && month<=5) return "🌸";
+  if(month>=6 && month<=8) return "☀️";
+  return "🍂";
 }
 
-/* Conversation starters with seasonal emoji injected */
+/* Conversation Starters */
 const season = getSeasonEmoji();
 const conversationStarters = {
   "Workplace":[
@@ -113,6 +109,7 @@ const conversationStarters = {
   ]
 };
 
+/* Time context */
 function getTimeContext(){
   const hour = new Date().getHours();
   if(hour>=5 && hour<12) return "morning";
@@ -120,16 +117,32 @@ function getTimeContext(){
   return "evening";
 }
 
+/* Daily starter logic */
 function showStarter(pack){
-  const starters = conversationStarters[pack];
-  const timeCtx = getTimeContext();
-  let starter = starters.find(s=>s.context===timeCtx) || starters[0];
-  const starterBox = document.getElementById("starterBox");
-  starterBox.textContent = starter.phrase;
-  starterBox.style.display="block";
-  starterBox.onclick = ()=> addMessage(starter.phrase,"bot");
+  const today = new Date().toDateString();
+  const storageKey = `starter_${pack}`;
+  let stored = JSON.parse(localStorage.getItem(storageKey)) || {};
+  
+  if(stored.date === today){
+    displayStarter(stored.phrase);
+  } else {
+    const starters = conversationStarters[pack];
+    const timeCtx = getTimeContext();
+    let starter = starters.find(s=>s.context===timeCtx) || starters[0];
+    
+    localStorage.setItem(storageKey, JSON.stringify({ date: today, phrase: starter.phrase }));
+    displayStarter(starter.phrase);
+  }
 }
 
+function displayStarter(phrase){
+  const starterBox = document.getElementById("starterBox");
+  starterBox.textContent = phrase;
+  starterBox.style.display="block";
+  starterBox.onclick = ()=> addMessage(phrase,"bot");
+}
+
+/* Chat handling */
 const chat = document.getElementById("chat");
 function addMessage(text,sender){
   const div = document.createElement("div");
