--- a/index.html
+++ b/index.html
@@ -14,151 +14,138 @@
   --text-muted: #a1a6b0;
 }
 
-body { margin:0; font-family:'Montserrat',system-ui,sans-serif; background: var(--bg-main); color: var(--text-main); display:flex; flex-direction:column; min-height:100vh; }
+body { 
+  margin:0; 
+  font-family:'Montserrat',system-ui,sans-serif; 
+  background: var(--bg-main); 
+  color: var(--text-main); 
+  display:flex; 
+  flex-direction:column; 
+  min-height:100vh; 
+}
 
-#chatContainer { display:flex; max-width:900px; margin:2rem auto; gap:1rem; animation: fadeIn 0.8s ease-out; }
+#chatContainer { 
+  display:flex; 
+  max-width:900px; 
+  margin:2rem auto; 
+  gap:1rem; 
+  animation: fadeIn 0.8s ease-out; 
+  flex:1;
+}
 
-#profileSidebar { width:220px; padding:1rem; background: var(--bg-card); border-radius:16px; flex-shrink:0; display:flex; flex-direction:column; gap:1rem; box-shadow:0 6px 16px rgba(0,0,0,0.3); }
-.packBtn { padding:0.6rem; border-radius:12px; border:none; background: var(--accent); color:#1b1f27; cursor:pointer; font-weight:500; transition: all 0.3s ease; }
-.packBtn:hover { background:#ff9f40; transform:scale(1.03); }
-.profileInfo p { font-size:0.85rem; color:var(--text-muted); margin:0.2rem 0; }
+#profileSidebar { 
+  width:220px; 
+  padding:1rem; 
+  background: var(--bg-card); 
+  border-radius:16px; 
+  flex-shrink:0; 
+  display:flex; 
+  flex-direction:column; 
+  gap:1rem; 
+  box-shadow:0 6px 16px rgba(0,0,0,0.3); 
+}
+
+.packBtn { 
+  padding:0.6rem; 
+  border-radius:12px; 
+  border:none; 
+  background: var(--accent); 
+  color:#1b1f27; 
+  cursor:pointer; 
+  font-weight:500; 
+  transition: all 0.3s ease; 
+}
+.packBtn:hover { 
+  background:#ff9f40; 
+  transform:scale(1.03); 
+}
+
+.profileInfo p { 
+  font-size:0.85rem; 
+  color:var(--text-muted); 
+  margin:0.2rem 0; 
+}
 
 /* Conversation Starter title */
-#starterTitle { font-weight:600; margin:0.5rem 0; color:#ffb86c; text-align:center; }
-
-#chatArea { flex:1; display:flex; flex-direction:column; background: var(--bg-card); border-radius:16px; padding:1rem; box-shadow:0 6px 16px rgba(0,0,0,0.25); }
-.message { max-width:75%; padding:0.8rem 1.2rem; margin-bottom:0.7rem; border-radius:20px; line-height:1.5; opacity:0; animation: fadeInMessage 0.5s forwards; }
-.user { background:var(--accent); color:#1b1f27; align-self:flex-end; }
-.bot { background:var(--bg-card); align-self:flex-start; }
-#starterBox { margin:1rem 0; padding:0.8rem; background:#1f232d; border-radius:12px; cursor:pointer; transition: transform 0.2s; }
-#starterBox:hover { transform:scale(1.03); }
-
-footer { display:flex; padding:0.8rem; gap:0.5rem; }
-footer input { flex:1; padding:0.6rem; border-radius:12px; border:none; background:#1f232d; color:var(--text-main); }
-footer button { padding:0.6rem 1rem; border-radius:999px; border:none; background: var(--accent); cursor:pointer; transition: all 0.3s ease; }
-footer button:hover { transform: scale(1.05); background:#ff9f40; }
-
-@keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
-@keyframes fadeInMessage { from {opacity:0; transform: translateY(10px);} to {opacity:1; transform: translateY(0);} }
-</style>
-</head>
-<body>
-
-<div id="chatContainer">
-  <div id="profileSidebar">
-    <div class="profileInfo">
-      <p>👤 <strong id="profileName"></strong></p>
-      <p>🌍 <span id="profileLanguage"></span></p>
-      <p>🧚 <span id="profileCompanion"></span></p>
-    </div>
-    <hr>
-    <p id="starterTitle">Conversation Starter</p>
-    <button class="packBtn" onclick="showStarter('Workplace')">Workplace</button>
-    <button class="packBtn" onclick="showStarter('Dating & Social')">Dating & Social</button>
-    <button class="packBtn" onclick="showStarter('Travel')">Travel</button>
-    <button class="packBtn" onclick="showStarter('Advanced Small Talk')">Advanced Small Talk</button>
-  </div>
-
-  <div id="chatArea">
-    <div id="starterBox" style="display:none;"></div>
-    <div id="chat"></div>
-  </div>
-</div>
-
-<footer>
-  <input id="userInput" placeholder="Type a word or phrase…" />
-  <button onclick="sendMessage()">Send</button>
-</footer>
-
-<script>
-const nickname = localStorage.getItem("nickname") || "Friend";
-const language = localStorage.getItem("language") || "en-US";
-const companion = localStorage.getItem("companion") || "Whisp";
-
-document.getElementById("profileName").textContent = nickname;
-document.getElementById("profileLanguage").textContent = language;
-document.getElementById("profileCompanion").textContent = companion;
-
-/* Seasonal emoji */
-function getSeasonEmoji(){
-  const month = new Date().getMonth()+1;
-  if(month>=12 || month<=2) return "❄️";
-  if(month>=3 && month<=5) return "🌸";
-  if(month>=6 && month<=8) return "☀️";
-  return "🍂";
+#starterTitle { 
+  font-weight:600; 
+  margin:0.5rem 0; 
+  color:#ffb86c; 
+  text-align:center; 
 }
 
-/* Conversation Starters */
-const season = getSeasonEmoji();
-const conversationStarters = {
-  "Workplace":[
-    { phrase:`${season} Good morning! How's your day starting?`, context:"morning" },
-    { phrase:`${season} Hi! Did you catch the latest project update?`, context:"afternoon" },
-    { phrase:`${season} Evening! Ready to wrap things up?`, context:"evening" }
-  ],
-  "Dating & Social":[
-    { phrase:`${season} Hi there! Would you like to grab coffee?`, context:"morning" },
-    { phrase:`${season} Hey! Want to take a walk this afternoon?`, context:"afternoon" },
-    { phrase:`${season} Hello! How was your day today?`, context:"evening" }
-  ],
-  "Travel":[
-    { phrase:`${season} Hi! Where is the nearest train station?`, context:"any" }
-  ],
-  "Advanced Small Talk":[
-    { phrase:`${season} Hello! Did you see the game yesterday?`, context:"any" }
-  ]
-};
-
-/* Time context */
-function getTimeContext(){
-  const hour = new Date().getHours();
-  if(hour>=5 && hour<12) return "morning";
-  if(hour>=12 && hour<18) return "afternoon";
-  return "evening";
+#chatArea { 
+  flex:1; 
+  display:flex; 
+  flex-direction:column; 
+  background: var(--bg-card); 
+  border-radius:16px; 
+  padding:1rem; 
+  box-shadow:0 6px 16px rgba(0,0,0,0.25); 
+  overflow-y:auto;
 }
 
-/* Daily starter logic */
-function showStarter(pack){
-  const today = new Date().toDateString();
-  const storageKey = `starter_${pack}`;
-  let stored = JSON.parse(localStorage.getItem(storageKey)) || {};
-  
-  if(stored.date === today){
-    displayStarter(stored.phrase);
-  } else {
-    const starters = conversationStarters[pack];
-    const timeCtx = getTimeContext();
-    let starter = starters.find(s=>s.context===timeCtx) || starters[0];
-    
-    localStorage.setItem(storageKey, JSON.stringify({ date: today, phrase: starter.phrase }));
-    displayStarter(starter.phrase);
-  }
+.message { 
+  max-width:75%; 
+  padding:0.8rem 1.2rem; 
+  margin-bottom:0.7rem; 
+  border-radius:20px; 
+  line-height:1.5; 
+  opacity:0; 
+  animation: fadeInMessage 0.5s forwards; 
 }
 
-function displayStarter(phrase){
-  const starterBox = document.getElementById("starterBox");
-  starterBox.textContent = phrase;
-  starterBox.style.display="block";
-  starterBox.onclick = ()=> addMessage(phrase,"bot");
+.user { 
+  background:var(--accent); 
+  color:#1b1f27; 
+  align-self:flex-end; 
 }
 
-/* Chat handling */
-const chat = document.getElementById("chat");
-function addMessage(text,sender){
-  const div = document.createElement("div");
-  div.className = `message ${sender}`;
-  div.textContent = text;
-  chat.appendChild(div);
-  chat.scrollTop = chat.scrollHeight;
+.bot { 
+  background:var(--bg-card); 
+  align-self:flex-start; 
 }
 
-function sendMessage(){
-  const input = document.getElementById("userInput");
-  if(!input.value.trim()) return;
-  addMessage(input.value,"user");
-  input.value="";
+#starterBox { 
+  margin:1rem 0; 
+  padding:0.8rem; 
+  background:#1f232d; 
+  border-radius:12px; 
+  cursor:pointer; 
+  transition: transform 0.2s; 
 }
-</script>
+#starterBox:hover { 
+  transform:scale(1.03); 
+}
 
-</body>
-</html>
+/* Typing animation bubble */
+.typing {
+  background: var(--bg-card);
+  color: var(--text-muted);
+  align-self: flex-start;
+  max-width: 50%;
+  padding: 0.8rem 1.2rem;
+  border-radius: 20px;
+  font-style: italic;
+  opacity: 0;
+  animation: fadeInMessage 0.5s forwards;
+}
+
+/* Sticky footer */
+footer {
+  position: sticky;
+  bottom: 0;
+  background: var(--bg-main);
+  display:flex;
+  padding:0.8rem;
+  gap:0.5rem;
+  z-index:10;
+}
+
+footer input { 
+  flex:1; 
+  padding:0.6rem; 
+  border-radius:12px; 
+  border:none; 
+  background:#1f232d; 
+  color:var(--tex
