--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Talk 2Me Nice — Conversation</title>
+<title>Talk 2Me Nice</title>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Playfair+Display:wght@600&display=swap" rel="stylesheet">
 <style>
 :root {
@@ -14,111 +14,125 @@
   --text-muted: #a1a6b0;
 }
 
-body { 
-  margin:0; 
-  font-family:'Montserrat',system-ui,sans-serif; 
-  background: var(--bg-main); 
-  color: var(--text-main); 
-  display:flex; 
-  flex-direction:column; 
-  min-height:100vh; 
+body {
+  margin:0;
+  font-family:'Montserrat',system-ui,sans-serif;
+  background: var(--bg-main);
+  color: var(--text-main);
+  min-height:100vh;
+  display:flex;
+  flex-direction:column;
 }
 
-#chatContainer { 
-  display:flex; 
-  max-width:900px; 
-  margin:2rem auto; 
-  gap:1rem; 
-  animation: fadeIn 0.8s ease-out; 
+.hidden { display:none; }
+
+/* Landing page */
+#landing {
+  flex:1;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  padding:2rem;
+  text-align:center;
+}
+
+#landing input {
+  padding:0.6rem 1rem;
+  margin:0.5rem;
+  border-radius:12px;
+  border:none;
+  width:200px;
+  background:#1f232d;
+  color:var(--text-main);
+}
+
+#landing button {
+  margin-top:1rem;
+  padding:0.6rem 1.5rem;
+  border-radius:999px;
+  border:none;
+  background: var(--accent);
+  color:#1b1f27;
+  cursor:pointer;
+  font-weight:500;
+  transition: all 0.3s ease;
+}
+#landing button:hover { background:#ff9f40; transform:scale(1.05); }
+
+/* Chat container */
+#chatContainer {
+  display:flex;
+  max-width:900px;
+  margin:2rem auto;
+  gap:1rem;
   flex:1;
 }
 
-#profileSidebar { 
-  width:220px; 
-  padding:1rem; 
-  background: var(--bg-card); 
-  border-radius:16px; 
-  flex-shrink:0; 
-  display:flex; 
-  flex-direction:column; 
-  gap:1rem; 
-  box-shadow:0 6px 16px rgba(0,0,0,0.3); 
+#profileSidebar {
+  width:220px;
+  padding:1rem;
+  background: var(--bg-card);
+  border-radius:16px;
+  flex-shrink:0;
+  display:flex;
+  flex-direction:column;
+  gap:1rem;
+  box-shadow:0 6px 16px rgba(0,0,0,0.3);
 }
 
-.packBtn { 
-  padding:0.6rem; 
-  border-radius:12px; 
-  border:none; 
-  background: var(--accent); 
-  color:#1b1f27; 
-  cursor:pointer; 
-  font-weight:500; 
-  transition: all 0.3s ease; 
+.packBtn {
+  padding:0.6rem;
+  border-radius:12px;
+  border:none;
+  background: var(--accent);
+  color:#1b1f27;
+  cursor:pointer;
+  font-weight:500;
+  transition: all 0.3s ease;
 }
-.packBtn:hover { 
-  background:#ff9f40; 
-  transform:scale(1.03); 
+.packBtn:hover { background:#ff9f40; transform:scale(1.03); }
+
+.profileInfo p {
+  font-size:0.85rem;
+  color:var(--text-muted);
+  margin:0.2rem 0;
 }
 
-.profileInfo p { 
-  font-size:0.85rem; 
-  color:var(--text-muted); 
-  margin:0.2rem 0; 
+#starterTitle {
+  font-weight:600;
+  margin:0.5rem 0;
+  color:#ffb86c;
+  text-align:center;
 }
 
-/* Conversation Starter title */
-#starterTitle { 
-  font-weight:600; 
-  margin:0.5rem 0; 
-  color:#ffb86c; 
-  text-align:center; 
-}
-
-#chatArea { 
-  flex:1; 
-  display:flex; 
-  flex-direction:column; 
-  background: var(--bg-card); 
-  border-radius:16px; 
-  padding:1rem; 
-  box-shadow:0 6px 16px rgba(0,0,0,0.25); 
+#chatArea {
+  flex:1;
+  display:flex;
+  flex-direction:column;
+  background: var(--bg-card);
+  border-radius:16px;
+  padding:1rem;
+  box-shadow:0 6px 16px rgba(0,0,0,0.25);
   overflow-y:auto;
 }
 
-.message { 
-  max-width:75%; 
-  padding:0.8rem 1.2rem; 
-  margin-bottom:0.7rem; 
-  border-radius:20px; 
-  line-height:1.5; 
-  opacity:0; 
-  animation: fadeInMessage 0.5s forwards; 
+.message {
+  max-width:75%;
+  padding:0.8rem 1.2rem;
+  margin-bottom:0.7rem;
+  border-radius:20px;
+  line-height:1.5;
+  opacity:0;
+  animation: fadeInMessage 0.5s forwards;
 }
 
-.user { 
-  background:var(--accent); 
-  color:#1b1f27; 
-  align-self:flex-end; 
-}
+.user { background:var(--accent); color:#1b1f27; align-self:flex-end; }
+.bot { background:var(--bg-card); align-self:flex-start; }
 
-.bot { 
-  background:var(--bg-card); 
-  align-self:flex-start; 
-}
+#starterBox { margin:1rem 0; padding:0.8rem; background:#1f232d; border-radius:12px; cursor:pointer; transition: transform 0.2s; }
+#starterBox:hover { transform:scale(1.03); }
 
-#starterBox { 
-  margin:1rem 0; 
-  padding:0.8rem; 
-  background:#1f232d; 
-  border-radius:12px; 
-  cursor:pointer; 
-  transition: transform 0.2s; 
-}
-#starterBox:hover { 
-  transform:scale(1.03); 
-}
-
-/* Typing animation bubble */
 .typing {
   background: var(--bg-card);
   color: var(--text-muted);
@@ -131,21 +145,142 @@ body {
   animation: fadeInMessage 0.5s forwards;
 }
 
-/* Sticky footer */
+/* Footer */
 footer {
-  position: sticky;
-  bottom: 0;
-  background: var(--bg-main);
   display:flex;
-  padding:0.8rem;
-  gap:0.5rem;
-  z-index:10;
+  justify-content:space-between;
+  align-items:center;
+  padding:0.8rem 2rem;
+  background: #1b1f27;
+  color:var(--text-muted);
+  font-size:0.85rem;
+  gap:1rem;
+  flex-wrap:wrap;
 }
 
-footer input { 
-  flex:1; 
-  padding:0.6rem; 
-  border-radius:12px; 
-  border:none; 
-  background:#1f232d; 
-  color:var(--tex
+footer a { color:var(--accent); text-decoration:none; transition:0.2s; }
+footer a:hover { text-decoration:underline; }
+
+footer input { flex:1; padding:0.6rem; border-radius:12px; border:none; background:#1f232d; color:var(--text-main); }
+footer button { padding:0.6rem 1rem; border-radius:999px; border:none; background: var(--accent); cursor:pointer; transition: all 0.3s ease; }
+footer button:hover { transform: scale(1.05); background:#ff9f40; }
+
+@keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
+@keyframes fadeInMessage { from {opacity:0; transform: translateY(10px);} to {opacity:1; transform: translateY(0);} }
+
+</style>
+</head>
+<body>
+
+<!-- Landing Page -->
+<div id="landing">
+  <h1>Welcome to Talk 2Me Nice</h1>
+  <p>Choose your nickname and your companion's name to start chatting:</p>
+  <input id="nicknameInput" placeholder="Your nickname" />
+  <input id="companionInput" placeholder="Your companion's name" />
+  <button onclick="startChat()">Start Chatting</button>
+</div>
+
+<!-- Chat Container -->
+<div id="chatContainer" class="hidden">
+  <div id="profileSidebar">
+    <div class="profileInfo">
+      <p>👤 <strong id="profileName"></strong></p>
+      <p>🌍 <span id="profileLanguage">en-US</span></p>
+      <p>🧚 <span id="profileCompanion"></span></p>
+    </div>
+    <hr>
+    <p id="starterTitle">Conversation Starter</p>
+    <button class="packBtn" onclick="showStarter('Workplace')">Workplace</button>
+    <button class="packBtn" onclick="showStarter('Dating & Social')">Dating & Social</button>
+    <button class="packBtn" onclick="showStarter('Travel')">Travel</button>
+    <button class="packBtn" onclick="showStarter('Advanced Small Talk')">Advanced Small Talk</button>
+  </div>
+  <div id="chatArea">
+    <div id="starterBox" style="display:none;"></div>
+    <div id="chat"></div>
+  </div>
+</div>
+
+<!-- Footer -->
+<footer>
+  <div>
+    <a href="#">Privacy</a> | <a href="#">Support</a>
+  </div>
+  <div style="flex:1; display:flex; gap:0.5rem;">
+    <input id="userInput" placeholder="Type a word or phrase…" />
+    <button onclick="sendMessage()">Send</button>
+  </div>
+</footer>
+
+<script>
+/* Landing page start */
+function startChat(){
+  const nick = document.getElementById("nicknameInput").value.trim();
+  const comp = document.getElementById("companionInput").value.trim();
+  if(!nick || !comp){
+    alert("Please enter both nicknames!");
+    return;
+  }
+  localStorage.setItem("nickname", nick);
+  localStorage.setItem("companion", comp);
+  document.getElementById("landing").classList.add("hidden");
+  document.getElementById("chatContainer").classList.remove("hidden");
+  initChat();
+}
+
+/* Initialize chat with saved names */
+function initChat(){
+  const nickname = localStorage.getItem("nickname") || "Friend";
+  const companion = localStorage.getItem("companion") || "Whisp";
+  document.getElementById("profileName").textContent = nickname;
+  document.getElementById("profileCompanion").textContent = companion;
+}
+
+/* Seasonal emoji */
+function getSeasonEmoji(){
+  const month = new Date().getMonth() + 1;
+  if(month>=12 || month<=2) return "❄️";
+  if(month>=3 && month<=5) return "🌸";
+  if(month>=6 && month<=8) return "☀️";
+  return "🍂";
+}
+
+/* Conversation starters */
+const season = getSeasonEmoji();
+const conversationStarters = {
+  "Workplace":[
+    { phrase:`${season} Good morning! How's your day starting?`, context:"morning" },
+    { phrase:`${season} Hi! Did you catch the latest project update?`, context:"afternoon" },
+    { phrase:`${season} Evening! Ready to wrap things up?`, context:"evening" }
+  ],
+  "Dating & Social":[
+    { phrase:`${season} Hi there! Would you like to grab coffee?`, context:"morning" },
+    { phrase:`${season} Hey! Want to take a walk this afternoon?`, context:"afternoon" },
+    { phrase:`${season} Hello! How was your day today?`, context:"evening" }
+  ],
+  "Travel":[ { phrase:`${season} Hi! Where is the nearest train station?`, context:"any" } ],
+  "Advanced Small Talk":[ { phrase:`${season} Hello! Did you see the game yesterday?`, context:"any" } ]
+};
+
+/* Time context */
+function getTimeContext(){
+  const hour = new Date().getHours();
+  if(hour>=5 && hour<12) return "morning";
+  if(hour>=12 && hour<18) return "afternoon";
+  return "evening";
+}
+
+/* Daily starter logic */
+function showStarter(pack){
+  const today = new Date().toDateString();
+  const storageKey = `starter_${pack}`;
+  let stored = JSON.parse(localStorage.getItem(storageKey)) || {};
+  if(stored.date === today){
+    displayStarter(stored.phrase);
+  } else {
+    const starters = conversationStarters[pack];
+    const timeCtx = getTimeContext();
+    let starter = starters.find(s=>s.context===timeCtx) || starters[0];
+    localStorage.setItem(storageKey, JSON.stringify({ date: today, phrase: starter.phrase }));
+    displayStarter(starter.
